@@ -3,6 +3,14 @@ X3 ChangeLog
 
 2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>
 
+	* src/nickserv.h src/nickserv.c: add extra parameter to reg_unreg_func and
+	unreg_func_t.
+
+	* src/chanserv.c src/mod-helpserv.c src/mod-memoserv.c: collateral
+	evolution fixes due to unreg_func change.
+
+2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>
+
 	* src/nickserv.h src/nickserv.c: add extra parameter to reg_auth_func and
 	auth_func_t.
 
